# aether

./: .gitignore  Aether_Full_Manual.md  Aether_Technical_Whitepaper.html  Aether_Web_Whitepaper.md  Aether_Whitepaper.html  CMakeLists.txt  ENGINEERING_STYLE_GUIDE.md  README.md  merge_and_clean.command  merge_docs.py  merge_docs.sh  push.command  sync_html_updates.py
docs/01_philosophy/: 01_process_philosophy.md  02_ontology_paradigm.md  index.md
docs/02_quickstart/: index.md
docs/03_core_subsystems/: 00_mathematical_foundations.md  01_spatial_grid.md  02_archetypeless_ecs.md  03_event_timing.md  04_concurrency_and_memory.md  04_mpmc_ringbuffer.md  index.md
docs/04_api_reference/: 01_plugin_abi_integration.md  02_ae_ext_interoperability.md  index.md
docs/04_memory_management/: index.md
docs/05_api_reference/: index.md
docs/05_benchmarks/: 01_performance_metrics.md  02_deployment_capacity.md  index.md
docs/06_ai_integration/: 01_llm_interaction_workflow.md
docs/06_benchmarks/: index.md
docs/06_service_and_toolchains/: 01_aether_server.md  05_ae_ext_interoperability.md  index.md
docs/06_service_and_toolchains/01_aether_server/: 01_server_architecture.md  02_double_pyramid_config.md  index.md
docs/06_service_and_toolchains/02_ava_visualization/: 01_cairo_2d_rendering.md  02_vulkan_3d_rendering.md  03_gaussian_splatting.md  04_visual_debug_tools.md  index.md
docs/06_service_and_toolchains/03_ai_integration/: 01_software_stack.md  02_llm_capabilities.md  index.md
docs/06_service_and_toolchains/04_spatial_analysis_domains/: 01_grid_and_voxel_computing.md  02_classical_spatial_computing.md  03_spatiotemporal_knowledge_graph.md  04_dynamic_fields_double_pyramid.md  index.md
docs/07_external_clients/: index.md
docs/07_external_rendering_clients/: 01_cairo_2d_rendering.md  02_vulkan_3d_rendering.md  index.md
docs/08_spatial_analysis_pipelines/: 01_voxel_perception.md  02_analytic_topology.md  03_spatiotemporal_graph.md  04_dynamic_fields_double_pyramid.md  index.md
docs/09_service_and_toolchains/: index.md
docs/88_visual_identity/: 01_brand_identity.md  index.md
docs/88_visual_identity/assets/: logo1.ai
docs/88_visual_identity/assets/v1/: logo.ai
include/: ae_ecs.h  ae_event.h  ae_memory.h  ae_spatial.h  ae_types.h  aetoer.h
lab/research_materials/: 01_jepa_collaboration_idea.md
src/: ae_ecs.c  ae_event.c  ae_memory.c  ae_spatial.c
stuff/mermaid/: aether_overview.html  aether_overview.md  aether_overview_free_layout.html
tests/: test_ecs.c  test_event.c  test_memory.c  test_perf.c  test_spatial.c
